fixed alignment

--- a/src/components/widgets/topBar.css
+++ b/src/components/widgets/topBar.css
@@ -25,6 +25,9 @@
 .bb-logo-wrapper {
     width: 2.2rem;
     height: 2.2rem;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
   }
   
   .bb-logo-wrapper img {
